--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -17,7 +17,7 @@
     <!-- <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline'"> -->
   </head>
   <body>
-    <div id="root"></div>
+    <div id="app"></div>
     <script src="./app.jsx" data-container="#app"></script>
      <!-- JQuery file -->
      <script src="https://code.jquery.com/jquery-3.6.0.min.js"
