--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -10,7 +10,7 @@
     <link href='https://fonts.googleapis.com/css?family=Hind:300,500,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
-    <link rel="stylesheet" href='assets/styles/index.css'/>
+    <link rel="stylesheet" href='/assets/styles/index.css'/>
     <script src="https://kit.fontawesome.com/b2369a58b6.js" crossorigin="anonymous"></script>
 
     <title>My App</title>
