some cleaning and organization

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,12 +10,11 @@
     <link href='https://fonts.googleapis.com/css?family=Hind:300,500,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
-    <link rel="stylesheet" href='src/assets/styles/index.css'/>
+    <link rel="stylesheet" href="/assets/styles/index.css"  type = "text/css" />
     <script src="https://kit.fontawesome.com/b2369a58b6.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/png" href="/assets/images/logo.png" />
 
     <title>IndEcX</title>
-    <!-- <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline'"> -->
   </head>
   <body>
     <div id="root"></div>
